--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="chart"></div>
-    <script src="index.mjs" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
