a little bit of styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <script src="//unpkg.com/d3@5.15.0/dist/d3.js"></script>
     <script src="//unpkg.com/d3fc@15.0.1/build/d3fc.js"></script>
+
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <div id="chart"></div>
